--- a/res/layout/view_activity_layout.xml
+++ b/res/layout/view_activity_layout.xml
@@ -13,87 +13,94 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <include layout="@layout/custom_action_bar"/>
+<!--UNISOC:BUG1204374 add the scollview to avoid incomplete display @{-->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:scrollbars="vertical"
+    android:fadingEdge="vertical"
+    android:fillViewport="true">
     <LinearLayout
-        android:id="@+id/name_and_dob_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="@dimen/tab_elevation"
         android:orientation="vertical">
+        <include layout="@layout/custom_action_bar"/>
         <LinearLayout
+            android:id="@+id/name_and_dob_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/personal_card_icon"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_gravity="center"
-                android:layout_marginVertical="20dp"
-                android:layout_marginStart="68dp"
-                android:layout_marginEnd="16dp"/>
-            <TextView
-                android:id="@+id/personal_card_large"
-                android:layout_width="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:elevation="@dimen/tab_elevation"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:maxLines="2"
-                android:textSize="22sp"
-                android:ellipsize="end"
-                android:layout_marginVertical="20dp"
-                android:layout_marginEnd="20dp"
-                android:lineHeight="28sp"
-                android:fontFamily="@*android:string/config_headlineFontFamily"
-                android:textColor="@color/emergency_owner_text_color"/>
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/personal_card_icon"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="20dp"
+                    android:layout_marginStart="68dp"
+                    android:layout_marginEnd="16dp"/>
+                <TextView
+                    android:id="@+id/personal_card_large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:maxLines="2"
+                    android:textSize="22sp"
+                    android:ellipsize="end"
+                    android:layout_marginVertical="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:lineHeight="28sp"
+                    android:fontFamily="@*android:string/config_headlineFontFamily"
+                    android:textColor="@color/emergency_owner_text_color"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <ViewFlipper
-        android:id="@+id/view_flipper"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="@dimen/tab_elevation">
-
-        <LinearLayout
-            android:id="@+id/no_info"
+        <ViewFlipper
+            android:id="@+id/view_flipper"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="72dp"
-            android:layout_marginBottom="48dp"
-            android:layout_marginEnd="104dp"
-            android:layout_marginStart="72dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/no_info_text_view"
+            android:elevation="@dimen/tab_elevation">
+            <LinearLayout
+                android:id="@+id/no_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:lineHeight="24sp"
-                android:text="@string/no_info_provided"
-                android:fontFamily="@*android:string/config_headlineFontFamilyMedium"
-                android:textColor="?android:textColorPrimary"
-                android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="72dp"
+                android:layout_marginBottom="48dp"
+                android:layout_marginEnd="104dp"
+                android:layout_marginStart="72dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:gravity="start"
-                android:lineHeight="20sp"
-                android:text="@string/tap_pencil"
-                android:textColor="?android:textColorSecondary"
-                android:textSize="14sp" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/no_info_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:lineHeight="24sp"
+                    android:text="@string/no_info_provided"
+                    android:fontFamily="@*android:string/config_headlineFontFamilyMedium"
+                    android:textColor="?android:textColorPrimary"
+                    android:textSize="16sp" />
 
-        <include
-            android:id="@+id/tabs"
-            layout="@layout/tabs" />
-    </ViewFlipper>
-</LinearLayout>
+                <TextView
+                    android:id="@+id/tap"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:gravity="start"
+                    android:lineHeight="20sp"
+                    android:text="@string/tap_pencil"
+                    android:textColor="?android:textColorSecondary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+            <include
+                android:id="@+id/tabs"
+                layout="@layout/tabs" />
+        </ViewFlipper>
+    </LinearLayout>
+</ScrollView>
+<!-- @}-->
