--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,7 +16,8 @@
 <resources>
     <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Settings">
         <item name="colorPrimaryDark">@color/primary_dark_color</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <!--UNISOC: Bug1145179 On a dark theme, the status bar font and icon are black.-->
+        <!--<item name="android:windowLightStatusBar">true</item>-->
         <item name="tabIndicatorColor">@color/accent_color_dark</item>
         <item name="textColorActionBar">?android:attr/textColorPrimary</item>
         <item name="preferenceTheme">@style/PreferenceTheme</item>
