--- a/res/xml/edit_emergency_info.xml
+++ b/res/xml/edit_emergency_info.xml
@@ -24,6 +24,7 @@
             android:icon="@drawable/ic_account_circle_filled_24dp"
             android:key="name"
             android:title="@string/name"
+            android:maxLength="100"
             android:summary="@string/unknown_name" />
 
         <com.android.emergency.preferences.EmergencyEditTextPreference
